# pyfigshare

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
pyfigshare/: __init__.py  _version.py  cli.py  figshare.py  figshare_v1.py  figshare_v2.py
src/: __init__.py
tests/: test_basic.py
